# stock_web_ui

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.claude/hooks/: stop_check_downstream_ui.py
.githooks/: pre-push
.github/workflows/: deploy-pages.yml
config/: cli_defaults.toml  magic_numbers.toml
docs/: index.html  index.template.html
docs/assets/: bs-chart.d.ts  bs-chart.js  cf-chart.d.ts  cf-chart.js  columns.d.ts  columns.js  stock-table.d.ts  stock-table.js  style.css
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: check_downstream_ui.mjs  downstream_server.py  jj-integrate-main.py
src/stock_web_ui/: __init__.py  browser.py  config.py  handler.py  page.py  render_index.py  serve.py
src_ts/: bs-chart.ts  cf-chart.ts  columns.ts  stock-table.ts
tests/: bs-chart.test.mjs  cf-chart.test.mjs  columns.test.mjs  stock-table.test.mjs  test_browser.py  test_config.py  test_handler.py  test_page.py  test_serve.py  test_stock_db_api_boundary.py
