[project]
name = "stock-web-ui"
version = "0.1.0"
description = "Shared web UI for stock screening and portfolio viewing"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_web_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]
