[package]
name = "stock-web-ui-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "stock_web_ui_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
mime_guess = "2"
serde_json = "1"
tiny_http = "0.12"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.24"
features = ["extension-module"]
optional = true
